--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
             <input
               id="is"
               class="main-search"
-              placeholder="Search with Google or enter address"
+              placeholder="Search the web"
               type="text" />
           </form>
         </div>
